<resources>
    <string name="app_name">Pets Services</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Pets Services -->
    <!-- Connexion screen -->
    <string name="login_email">Adresse mail</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_connection_button">Connexion</string>
    <string name="login_registration"><u>Pas encore de compte ? Inscrivez-vous !</u></string>

    <!-- Inscription screen -->
    <string name="required">* Champs requis</string>
    <!-- Title and field -->
    <string name="title_registration">Inscription</string>
    <string name="pets_services_title">Pets Services</string>
    <string name="edit_profile_title">Modifier mon profil</string>
    <string name="email_title">Adresse mail*</string>
    <string name="email_registration">Adresse mail</string>
    <string name="password_title">Mot de passe*</string>
    <string name="password_registration">Mot de passe</string>
    <string name="edit_password_title">Changer le mot de passe :</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="confirmation_new_password">Confirmation mot de passe</string>
    <string name="validation_password_registration">Validation mot de passe*</string>
    <string name="name_registration">Nom et prénom*</string>
    <string name="latsname_registration">Nom</string>
    <string name="fisrtname_registration">Prénom</string>
    <string name="phone_registration">Numéro de téléphone*</string>
    <string name="adress_registration">Adresse*</string>
    <string name="edit_adress">Mon adresse : </string>
    <string name="street_name_registration">Rue</string>
    <string name="city_registration">Ville</string>
    <string name="street_number_registration">Numéro</string>
    <string name="postal_code_registration">Code postal</string>
    <string name="country_title">Pays*</string>
    <string name="country_registration">Pays</string>
    <string name="role_registration">Rôles (Sélectionnez au moins un rôle)</string>
    <string name="edit_roles">Mes rôles :</string>
    <string name="edit_profile_as_supplier">En tant qu\'offreur de service :</string>
    <string name="edit_profile_supplier_slogan">Slogan</string>
    <string name="edit_profile_supplier_commune">Commune</string>
    <string name="edit_profile_supplier_weight_max">Poids maximum</string>
    <string name="edit_profile_as_customer">En tant que demandeur de service :</string>
    <string name="edit_profile_customer_commune">Commune</string>
    <!-- checkbox -->
    <string name="animal_walker_registration">Je promène</string>
    <string name="host_registration">J\'accueil</string>
    <string name="search_walker_registration">Je cherche un promeneur</string>
    <string name="search_host_registration">Je cherche un hôte</string>


    <!-- Button -->
    <string name="registration_back_button">Retour</string>
    <string name="registration_button">Je m\'inscris</string>
    <string name="edit_profile_button">Valider</string>
    <string name="cancelled_edit_profile_button">Annuler</string>

    <!-- Country -->
    <string name="country_belgique">Belgique</string>
    <string name="country_france">France</string>
    <string name="country_luxembourg">Luxembourg</string>

    <!-- Error  -->
    <string name="form_error">Vous avez des champs incorrects!</string>
    <string name="roles_error">Vous devez choisir au moins un rôle!</string>
    <string name="email_format_error">Adresse mail n\'est pas valide!</string>
    <string name="email_empty_error">Adresse mail requise !</string>
    <string name="password_empty_error">Mot de passe requis!</string>
    <string name="validation_password_format_error">Mot de passe de validation incorrect</string>
    <string name="validation_password_empty_error">Mot de passe de validation requis !</string>
    <string name="lastname_format_error">Nom incorrect</string>
    <string name="lastname_empty_error">Nom requis !</string>
    <string name="firstname_format_error">Prénom incorrect</string>
    <string name="firstname_empty_error">Prénom requis !</string>
    <string name="phone_format_error">Numéro de téléphone incorrect</string>
    <string name="phone_empty_error">Numéro de téléphone requis !</string>
    <string name="street_name_format_error">Rue incorrecte</string>
    <string name="street_name_empty_error">Rue requise !</string>
    <string name="street_number_format_error">Numéro incorrect</string>
    <string name="street_number_empty_error">Numéro requis !</string>
    <string name="locality_format_error">Ville incorrecte</string>
    <string name="locality_empty_error">Ville requis !</string>
    <string name="postale_code_format_error">Code postal incorrect</string>
    <string name="postale_code_empty_error">Code postal requis !</string>
    <string name="country_error">Pays requis !</string>


    <!-- Registration Message -->
    <string name="user_added">Utilisateur enregistré</string>
    <string name="user_already_exist">L\'adresse mail existe déjà !</string>
    <string name="connectivity_error">Aucune connexion internet</string>
    <string name="request_error">Une erreur s’est produite pendant votre demande</string>
    <string name="technical_error">Erreur technique</string>
    <string name="no_error">Pas d\'erreur</string>
    <string name="bad_credentials">Identifiant ou mot de passe incorrect</string>

    <!-- After Registration -->
    <string name="welcome_popup">Merci de votre inscription ! Veuillez complèter votre profil !</string>

    <!-- Set SharedPreferences  -->
    <string name="email_payload">email</string>
    <string name="exp_date_payload">expDate</string>
    <string name="user_id_payload">userId</string>
    <string name="token">token</string>

    <!-- Profile -->
    <string name="edit_profile_registration">Mon profil</string>
    <string name="absences_button">Absences</string>
    <string name="animal_type_button">Animaux acceptés</string>
    <string name="animals_button">Mes animaux</string>
    <string name="update_profile_button">Modifier</string>
    <string name="weight_max">Poids maximum d\'un animal</string>
    <string name="supplier_rating">Note: </string>
    <string name="supplier_ratings">Mes notes:</string>

    <!-- Bottom navigation menu -->
    <string name="home_space">Accueil</string>
    <string name="profile_space">Profil</string>
    <string name="firstname_space">%1$s</string>
    <string name="lastname_space">%1$s</string>
    <string name="locality_space">Commune : %1$s</string>
    <string name="slogan_space">Slogan : %1$s</string>
    <string name="review_space">Mes avis :</string>
    <string name="rating_space">Mes notes : %1$s</string>
    <string name="weight_max_space">Poids maximum d\'un animal : %1$s kg</string>

    <!-- Bearer -->
    <string name="bearer">Bearer </string>

    <!-- sharedPref -->
    <string name="sharedPref">sharedPref </string>

    <!--ARGS-->
    <string name="ARG_EMAIL">ARGS_EMAIL</string>
    <string name="ARG_LASTNAME">ARG_LASTNAME</string>
    <string name="ARG_FIRSTNAME">ARG_FIRSTNAME</string>
    <string name="ARG_PHONE">ARG_PHONE</string>
    <string name="ARG_STREET_NAME">ARG_STREET_NAME</string>
    <string name="ARG_STREET_NUMBER">ARG_STREET_NUMBER</string>
    <string name="ARG_LOCALITY">ARG_LOCALITY</string>
    <string name="ARG_POSTAL_CODE">ARG_POSTAL_CODE</string>
    <string name="ARG_COUNTRY">ARG_COUNTRY</string>
    <string name="ARG_PASSWORD">ARG_PASSWORD</string>
    <string name="ARG_IS_HOST">ARG_IS_HOST</string>
    <string name="ARG_IS_ANIMAL_WALKER">ARG_IS_ANIMAL_WALKER</string>
    <string name="ARG_IS_SEARCH_HOST">ARG_IS_SEARCH_HOST</string>
    <string name="ARG_IS_SEARCH_ANIMAL_WALKER">ARG_IS_SEARCH_ANIMAL_WALKER</string>
    <string name="ARG_SLOGAN">ARG_SLOGAN</string>
    <string name="ARG_WEIGHT_MAX">ARG_WEIGHT_MAX</string>
    <string name="ARG_SUPPLIER_LOCALITY">ARG_SUPPLIER_LOCALITY</string>
    <string name="ARG_CUSTOMER_LOCALITY">ARG_CUSTOMER_LOCALITY</string>

    <!--ARGS-->
    <string name="EMPTY"> </string>

</resources>