<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".ui.fragment.RegistrationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/edit_profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_profile_registration"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:textStyle ="bold"
                android:textColor="@color/black"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/update_profile_button"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/update_profile_button"
                android:textSize="11dp" />

            <GridLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="3"
                >

                <Button
                    android:id="@+id/absences_button"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="4dp"
                    android:width="30dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/absences_button"
                    android:textSize="11dp" />

                <Button
                    android:id="@+id/animals_type_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/animal_type_button"
                    android:textSize="11dp" />

                <Button
                    android:id="@+id/animals_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/animals_button"
                    android:textSize="11dp" />
            </GridLayout>

            <GridLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                >

                <TextView
                    android:id="@+id/first_name"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/edit_profile_registration"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/last_name"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile_registration"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle ="bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>


            </GridLayout>


            <TextView
                android:id="@+id/locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locality_space"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle ="bold"
                android:textColor="@color/black"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/raking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_space"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle ="bold"
                android:textColor="@color/black"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slogan_space"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle ="bold"
                android:textColor="@color/black"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_space"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle ="bold"
                android:textColor="@color/black"
                android:textSize="14dp"/>


        </LinearLayout>
    </ScrollView>


</layout>