<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".ui.fragment.RegistrationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/edit_profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pets_services_title"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textStyle ="bold"
                android:textColor="@color/black"
                android:textSize="30dp"/>

            <TextView
                android:id="@+id/interraction_between_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/interraction_between_user"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:textStyle ="bold"
                android:textColor="@color/red"
                android:textSize="14dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="530dp"
                android:columnCount="2"
                android:rowCount="2">

                <Button
                    android:id="@+id/host_registration"
                    android:layout_width="175dp"
                    android:layout_height="137dp"
                    android:layout_margin="20dp"
                    android:text="@string/host_registration"
                    android:textSize="11dp"
                    android:backgroundTint="@color/colorPrimary"
                   />

                <Button
                    android:id="@+id/animal_walker_registration"
                    android:layout_width="175dp"
                    android:layout_height="137dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/animal_walker_registration"
                    android:textSize="11dp" />

                <Button
                    android:id="@+id/search_host_registration"
                    android:layout_width="175dp"
                    android:layout_height="137dp"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/search_host_registration"
                    android:textSize="11dp" />

                <Button
                    android:id="@+id/search_walker_registration"
                    android:layout_width="175dp"
                    android:layout_height="137dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/search_walker_registration"
                    android:textSize="10dp" />
            </GridLayout>
        </LinearLayout>
    </ScrollView>


</layout>